# space-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
templates/: Cargo.toml  build.zig  lib.rs  main.zig
