[package]
name = "space"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = "z"

[dependencies]
# User interface
clap = { version = "4.0", features = ["derive"] }
color-eyre = { version = "0.6", default-features = false }

# Capitalization, progress bars, user input
indicatif = "0.17"
dialoguer = { version = "0.10", features = ["fuzzy-select"] }

# Serialization and deserialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Http client
ureq = "2.5"

# Configuration
toml = "0.5"
platform-dirs = "0.3"

# Guess mime type for path
mime_guess = "2.0"

# Unique identifiers
uuid = { version = "1.2", features = ["v4", "fast-rng"] }

# Extremely fast templating
sailfish = "0.5"
glob = "0.3.0"
duct = "0.13.6"
