[package]
name = "space"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = "z"

[dependencies]
# User interface
clap = { version = "4.0", features = ["derive"] }
color-eyre = { version = "0.6", default-features = false }

# Capitalization, progress bars, user input
indicatif = "0.17"
dialoguer = { version = "0.10", features = ["fuzzy-select"] }

# Serialization and deserialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Configuration
toml = "0.5"
platform-dirs = "0.3"

# Guess mime type for path
mime_guess = "2.0"

# Unique identifiers
uuid = { version = "1.2", features = ["v4", "fast-rng"] }

# Extremely fast templating
sailfish = "0.5"

# Matching file paths with Unix shell patterns
glob = "0.3"

# Run shell commands easily
duct = "0.13"

# Async stuff
postgrest = "1.3"
tokio = { version = "1.23", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
open = "3.2.0"
